--- a/Backend/package.json
+++ b/Backend/package.json
@@ -53,6 +53,7 @@
     "content-type": "^1.0.5",
     "cookie": "^0.7.1",
     "cookie-signature": "^1.0.6",
+    "cors": "^2.8.5",
     "create-require": "^1.1.1",
     "cross-spawn": "^7.0.6",
     "data-view-buffer": "^1.0.1",
